table内、セルとセルの間にできる隙間をなくした

--- a/C-SlideShow/C-SlideShow.csproj
+++ b/C-SlideShow/C-SlideShow.csproj
@@ -83,6 +83,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Archiver\ArchiverFactory.cs" />
+    <Compile Include="Archiver\LzhArchiver.cs" />
     <Compile Include="Archiver\PdfArchiver.cs" />
     <Compile Include="CommonControl\HotkeyControl.xaml.cs">
       <DependentUpon>HotkeyControl.xaml</DependentUpon>
